--- a/src/pages/AvailabilityBoardPopup.page
+++ b/src/pages/AvailabilityBoardPopup.page
@@ -1,4 +1,4 @@
-<apex:page controller="adelwhat.AvailabilityService" showHeader="false" sidebar="false" cache="false">
+<apex:page controller="AvailabilityService" showHeader="false" sidebar="false" cache="false">
     <apex:slds />
     <!-- CometD Scripts -->
     <apex:includeScript value="{!URLFOR($Resource.cometd)}" />
@@ -114,7 +114,7 @@
     <body>
     <div class="slds-scope">
         <div class="" id="board">
-            <apex:form>
+            <apex:form >
                 <h2 class="slds-text-heading_medium">Team Availability Board</h2>
                 <div>
                     <table >
