--- a/src/pages/AvailabilityPopout3.page
+++ b/src/pages/AvailabilityPopout3.page
@@ -273,7 +273,7 @@
     <body>
     <div class="board-wrapper">
         <div class="board" id="board">
-            <apex:form>
+            <apex:form >
                 <h2 class="slds-text-heading_large" style="padding: 20px">
                     <strong>{!teamName}</strong> Team Availability
                 </h2>
@@ -291,7 +291,7 @@
                         <apex:repeat value="{!availabilities}" var="a">
                             <tr  id="row-{!a.userRecordId}"  data-user-id="{!a.userRecordId}" data-availability-id="{!a.availabilityId}">
                                 <td>
-                                    <div style="margin-left:5px; height: 50px; width: 50px; border-radius: 50%; overflow: hidden;">
+                                    <div style="margin:5px; height: 50px; width: 50px; border-radius: 50%; overflow: hidden;">
                                         <img src="{!a.photo}" alt="User Photo" style="height: 100%; width: 100%; object-fit: cover;" />
                                     </div>
 <!--                                    <img src="{!a.photo}" style="height: 50px; width: 50px; border-radius: 50%;" />-->
